--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -1,79 +1,80 @@
 {
-	"name": "ima-gulp-tasks",
-	"version": "0.13.0",
-	"description": "Default gulp tasks for IMA.js applications.",
-	"main": "",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/seznam/IMA.js-gulp-tasks.git"
-	},
-	"keywords": [
+  "name": "ima-gulp-tasks",
+  "version": "0.13.0",
+  "description": "Default gulp tasks for IMA.js applications.",
+  "main": "",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/seznam/IMA.js-gulp-tasks.git"
+  },
+  "keywords": [
     "gulp",
     "IMA.js",
     "ima"
   ],
-	"author": "Seznam.cz, a.s.",
-	"license": "MIT",
-	"bugs": {
-		"url": "https://github.com/seznam/IMA.js-gulp-tasks/issues"
-	},
-	"publishConfig": {
-		"registry": "http://registry.npmjs.org/"
-	},
-	"homepage": "https://github.com/seznam/IMA.js-gulp-tasks",
-	"devDependencies": {},
-	"dependencies": {
-		"babel-core": "^6.10.4",
-		"babel-plugin-external-helpers-2": "^6.3.13",
-		"babel-plugin-transform-es2015-modules-systemjs": "^6.9.0",
-		"babel-plugin-transform-react-constant-elements": "^6.9.1",
-		"babel-plugin-transform-react-inline-elements": "^6.8.0",
-		"babel-preset-es2015": "^6.9.0",
-		"babel-preset-es2015-loose": "^7.0.0",
-		"babel-preset-react": "^6.5.0",
-		"babelify": "^7.3.0",
-		"browserify": "^13.0.1",
-		"del": "^2.2.1",
-		"eslint": "^2.13.1",
-		"eslint-plugin-react": "^5.2.2",
-		"event-stream": "^3.3.3",
-		"fb-flo": "^0.5.0",
-		"fibers": "^1.0.13",
-		"gulp": "^3.9.1",
-		"gulp-autoprefixer": "^3.1.0",
-		"gulp-babel": "^6.1.2",
-		"gulp-cached": "^1.1.0",
-		"gulp-change": "^1.0.0",
-		"gulp-concat": "^2.6.0",
-		"gulp-cssnano": "^2.1.2",
-		"gulp-eslint": "^2.0.0",
-		"gulp-if": "^2.0.1",
-		"gulp-ignore": "^2.0.1",
-		"gulp-insert": "^0.5.0",
-		"gulp-less": "^3.1.0",
-		"gulp-live-server": "0.0.30",
-		"gulp-messageformat": "0.0.10",
-		"gulp-plumber": "^1.1.0",
-		"gulp-remember": "^0.3.1",
-		"gulp-save": "^1.2.1",
-		"gulp-sourcemaps": "^1.6.0",
-		"gulp-sweetjs": "^0.6.1",
-		"gulp-uglify": "^1.5.4",
-		"gulp-util": "^3.0.7",
-		"gulp-watch": "^4.3.8",
-		"gulp-yuidoc": "^0.1.2",
-		"ima-examples": "^0.12.5",
-		"jasmine": "^2.4.1",
-		"jasmine-core": "^2.4.1",
-		"karma": "^1.0.0",
-		"karma-babel-preprocessor": "^6.0.1",
-		"karma-jasmine": "^1.0.2",
-		"karma-phantomjs-launcher": "^1.0.1",
-		"phantomjs-prebuilt": "^2.1.7",
-		"run-sequence": "^1.2.1",
-		"vinyl-source-stream": "^1.1.0"
-	}
+  "author": "Seznam.cz, a.s.",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/seznam/IMA.js-gulp-tasks/issues"
+  },
+  "publishConfig": {
+    "registry": "http://registry.npmjs.org/"
+  },
+  "homepage": "https://github.com/seznam/IMA.js-gulp-tasks",
+  "devDependencies": {},
+  "dependencies": {
+    "babel-core": "^6.10.4",
+    "babel-plugin-external-helpers-2": "^6.3.13",
+    "babel-plugin-transform-es2015-modules-systemjs": "^6.9.0",
+    "babel-plugin-transform-react-constant-elements": "^6.9.1",
+    "babel-plugin-transform-react-inline-elements": "^6.8.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015-loose": "^7.0.0",
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.0.1",
+    "del": "^2.2.1",
+    "eslint": "^2.13.1",
+    "eslint-plugin-react": "^5.2.2",
+    "event-stream": "^3.3.3",
+    "fb-flo": "^0.5.0",
+    "fibers": "^1.0.13",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-cached": "^1.1.0",
+    "gulp-change": "^1.0.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-eslint": "^2.0.0",
+    "gulp-if": "^2.0.1",
+    "gulp-ignore": "^2.0.1",
+    "gulp-insert": "^0.5.0",
+    "gulp-less": "^3.1.0",
+    "gulp-live-server": "0.0.30",
+    "gulp-messageformat": "0.0.10",
+    "gulp-plumber": "^1.1.0",
+    "gulp-remember": "^0.3.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-save": "^1.2.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-sweetjs": "^0.6.1",
+    "gulp-uglify": "^1.5.4",
+    "gulp-util": "^3.0.7",
+    "gulp-watch": "^4.3.8",
+    "gulp-yuidoc": "^0.1.2",
+    "ima-examples": "^0.12.5",
+    "jasmine": "^2.4.1",
+    "jasmine-core": "^2.4.1",
+    "karma": "^1.0.0",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.1",
+    "phantomjs-prebuilt": "^2.1.7",
+    "run-sequence": "^1.2.1",
+    "vinyl-source-stream": "^1.1.0"
+  }
 }
