--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -26,54 +26,53 @@
 	"homepage": "https://github.com/seznam/IMA.js-gulp-tasks",
 	"devDependencies": {},
 	"dependencies": {
-		"babel-core": "^6.17.0",
-		"babel-plugin-external-helpers-2": "^6.3.13",
-		"babel-plugin-transform-es2015-modules-systemjs": "^6.14.0",
-		"babel-plugin-transform-react-constant-elements": "^6.9.1",
-		"babel-plugin-transform-react-inline-elements": "^6.8.0",
-		"babel-preset-latest": "^6.16.0",
-		"babel-preset-react": "^6.16.0",
-		"babelify": "^7.3.0",
-		"browserify": "^13.1.0",
-		"del": "^2.2.2",
-		"docdash": "^0.4.0",
-		"eslint": "^3.7.1",
-		"eslint-plugin-react": "^6.4.1",
-		"event-stream": "^3.3.4",
-		"fb-flo": "^0.5.0",
-		"fibers": "^1.0.15",
-		"gulp": "^3.9.1",
-		"gulp-autoprefixer": "^3.1.1",
-		"gulp-babel": "^6.1.2",
-		"gulp-cached": "^1.1.0",
-		"gulp-change": "^1.0.0",
-		"gulp-concat": "^2.6.0",
-		"gulp-cssnano": "^2.1.2",
-		"gulp-eslint": "^3.0.1",
-		"gulp-ignore": "^2.0.1",
-		"gulp-insert": "^0.5.0",
-		"gulp-jsdoc3": "^1.0.0",
-		"gulp-less": "^3.1.0",
+		"babel-core": "6.17.0",
+		"babel-plugin-external-helpers-2": "6.3.13",
+		"babel-plugin-transform-es2015-modules-systemjs": "6.18.0",
+		"babel-plugin-transform-react-constant-elements": "6.9.1",
+		"babel-plugin-transform-react-inline-elements": "6.8.0",
+		"babel-preset-latest": "6.16.0",
+		"babel-preset-react": "6.16.0",
+		"babelify": "7.3.0",
+		"browserify": "13.1.1",
+		"del": "2.2.2",
+		"docdash": "0.4.0",
+		"eslint": "3.9.1",
+		"eslint-plugin-react": "6.4.1",
+		"event-stream": "3.3.4",
+		"fb-flo": "0.5.0",
+		"fibers": "1.0.15",
+		"gulp": "github:gulpjs/gulp#4.0",
+		"gulp-autoprefixer": "3.1.1",
+		"gulp-babel": "6.1.2",
+		"gulp-cached": "1.1.0",
+		"gulp-change": "1.0.0",
+		"gulp-concat": "2.6.0",
+		"gulp-cssnano": "2.1.2",
+		"gulp-eslint": "3.0.1",
+		"gulp-ignore": "2.0.1",
+		"gulp-insert": "0.5.0",
+		"gulp-jsdoc3": "1.0.0",
+		"gulp-less": "3.1.0",
 		"gulp-live-server": "0.0.30",
 		"gulp-messageformat": "0.0.10",
-		"gulp-plumber": "^1.1.0",
-		"gulp-remember": "^0.3.1",
-		"gulp-rename": "^1.2.2",
-		"gulp-save": "^1.2.1",
+		"gulp-plumber": "1.1.0",
+		"gulp-remember": "0.3.1",
+		"gulp-rename": "1.2.2",
+		"gulp-save": "1.2.1",
 		"gulp-sourcemaps": "1.6.0",
-		"gulp-tap": "^0.1.3",
-		"gulp-uglify": "^2.0.0",
-		"gulp-util": "^3.0.7",
-		"gulp-watch": "^4.3.10",
-		"ima-examples": "^0.13.0",
-		"jasmine": "^2.5.2",
-		"jasmine-core": "^2.5.2",
-		"karma": "^1.3.0",
-		"karma-babel-preprocessor": "^6.0.1",
-		"karma-jasmine": "^1.0.2",
-		"karma-phantomjs-launcher": "^1.0.2",
-		"phantomjs-prebuilt": "^2.1.13",
-		"run-sequence": "^1.2.2",
-		"vinyl-source-stream": "^1.1.0"
+		"gulp-tap": "0.1.3",
+		"gulp-uglify": "2.0.0",
+		"gulp-util": "3.0.7",
+		"gulp-watch": "4.3.10",
+		"ima-examples": "0.13.0",
+		"jasmine": "2.5.2",
+		"jasmine-core": "2.5.2",
+		"karma": "1.3.0",
+		"karma-babel-preprocessor": "6.0.1",
+		"karma-jasmine": "1.0.2",
+		"karma-phantomjs-launcher": "1.0.2",
+		"phantomjs-prebuilt": "2.1.13",
+		"vinyl-source-stream": "1.1.0"
 	}
 }
