--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -4,13 +4,13 @@
 	"description": "Isomorphic javascript application",
 	"main": "build/server.js",
 	"scripts": {
-		"app:hello": "node node_modules/gulp/bin/gulp.js app:hello",
-		"app:feed": "node node_modules/gulp/bin/gulp.js app:feed",
-		"app:todos": "node node_modules/gulp/bin/gulp.js app:todos",
+		"app:hello": "node node_modules/gulp/bin/gulp.js app_hello",
+		"app:feed": "node node_modules/gulp/bin/gulp.js app_feed",
+		"app:todos": "node node_modules/gulp/bin/gulp.js app_todos",
 		"test": "node node_modules/gulp/bin/gulp.js test",
 		"dev": "node node_modules/gulp/bin/gulp.js dev",
 		"build": "NODE_ENV=production node_modules/gulp/bin/gulp.js build",
-		"build:spa": "NODE_ENV=production node_modules/gulp/bin/gulp.js build:spa",
+		"build:spa": "NODE_ENV=production node_modules/gulp/bin/gulp.js build_spa",
 		"start": "NODE_ENV=production node build/server.js"
 	},
 	"keywords": [
@@ -38,8 +38,8 @@
 	},
 	"license": "MIT",
 	"devDependencies": {
-		"ima-gulp-task-loader": "^0.12.0",
-		"ima-gulp-tasks": "^0.14.0-rc.5"
+		"ima-gulp-task-loader": "github:seznam/IMA.js-gulp-task-loader#7245388",
+		"ima-gulp-tasks": "github:seznam/IMA.js-gulp-tasks#next"
 	},
 	"dependencies": {
 		"body-parser": "^1.15.2",
