--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -38,19 +38,19 @@
 	},
 	"license": "MIT",
 	"devDependencies": {
-		"ima-gulp-task-loader": "github:seznam/IMA.js-gulp-task-loader#7245388",
+		"ima-gulp-task-loader": "github:seznam/IMA.js-gulp-task-loader#master",
 		"ima-gulp-tasks": "github:seznam/IMA.js-gulp-tasks#next"
 	},
 	"dependencies": {
-		"body-parser": "^1.15.2",
-		"compression": "^1.6.2",
-		"cookie-parser": "^1.4.3",
-		"express": "^4.14.0",
+		"body-parser": "1.15.2",
+		"compression": "1.6.2",
+		"cookie-parser": "1.4.3",
+		"express": "4.14.0",
 		"helmet": "^2.1.1",
 		"ima": "^0.14.0-rc.8",
-		"ima-server": "^0.14.0-rc.3",
-		"method-override": "^2.3.6",
+		"ima-server": "0.14.0-rc.3",
+		"method-override": "2.3.6",
 		"multer": "^1.0.6",
-		"serve-favicon": "^2.3.0"
+		"serve-favicon": "2.3.0"
 	}
 }
