--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -33,6 +33,7 @@
 		"babel-plugin-transform-react-inline-elements": "6.22.0",
 		"babel-preset-latest": "6.22.0",
 		"babel-preset-react": "6.22.0",
+		"babelify": "7.3.0",
 		"browserify": "14.0.0",
 		"del": "2.2.2",
 		"docdash": "0.4.0",
