--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,7 +4,7 @@
 	"description": "Default dev server for IMA.js applications.",
 	"main": "index.js",
 	"scripts": {
-		"prepublish": "npm run test",
+		"prepublishOnly": "npm run test",
 		"test": "node node_modules/gulp/bin/gulp.js test",
 		"dev": "node node_modules/gulp/bin/gulp.js dev"
 	},
@@ -28,7 +28,7 @@
 	"homepage": "https://github.com/seznam/IMA.js-server",
 	"devDependencies": {
 		"express": "^4.14.0",
-		"gulp": "^3.9.1",
+		"gulp": "github:gulpjs/gulp#3f5aba2",
 		"gulp-jasmine": "^2.4.2",
 		"gulp-plumber": "^1.1.0",
 		"jasmine": "^2.5.3",
@@ -40,5 +40,9 @@
 		"ima-helpers": "0.14.0-rc.1",
 		"stack-trace": "0.0.9",
 		"winston": "2.3.0"
+	},
+	"engines": {
+		"node": ">=6",
+		"npm": ">=4 <6"
 	}
 }
