--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -4,7 +4,7 @@
 	"description": "Various helpers for the IMA.js framework.",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "node_modules/gulp/bin/gulp.js test"
 	},
 	"repository": {
 		"type": "git",
@@ -25,6 +25,10 @@
 	},
 	"dependencies": {
 		"clone": "^2.1.0"
+	},
+	"devDependencies": {
+		"gulp": "github:gulpjs/gulp#3f5aba2",
+		"gulp-jasmine": "^2.4.2"
 	},
 	"engines": {
 		"node": ">=6",
