--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -27,19 +27,19 @@
 	},
 	"homepage": "https://github.com/seznam/IMA.js-server",
 	"devDependencies": {
-		"express": "^4.14.0",
+		"express": "^4.15.3",
 		"gulp": "github:gulpjs/gulp#3f5aba2",
 		"gulp-jasmine": "^2.4.2",
 		"gulp-plumber": "^1.1.0",
 		"ima-helpers": "^0.14.0-rc.2",
-		"jasmine": "^2.5.3",
+		"jasmine": "^2.6.0",
 		"superagent": "^3.5.2"
 	},
 	"dependencies": {
-		"async-each": "^1.0.1",
-		"highlight.js": "^9.11.0",
-		"stack-trace": "^0.0.9",
-		"winston": "^2.3.1"
+		"async-each": "1.0.1",
+		"highlight.js": "9.12.0",
+		"stack-trace": "0.0.10",
+		"winston": "2.3.1"
 	},
 	"peerDependencies": {
 		"ima-helpers": "0.14.x"
