--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -37,6 +37,7 @@
 	},
 	"dependencies": {
 		"async-each": "1.0.1",
+		"error-to-json": "1.1.0",
 		"highlight.js": "9.12.0",
 		"stack-trace": "0.0.10",
 		"winston": "2.3.1"
