--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -36,11 +36,11 @@
 		"superagent": "^3.5.2"
 	},
 	"dependencies": {
-		"async-each": "1.0.1",
-		"error-to-json": "1.1.0",
-		"highlight.js": "9.12.0",
-		"stack-trace": "0.0.10",
-		"winston": "2.3.1"
+		"async-each": "^1.0.1",
+		"error-to-json": "^1.1.0",
+		"highlight.js": "^9.12.0",
+		"stack-trace": "^0.0.10",
+		"winston": "^2.3.1"
 	},
 	"peerDependencies": {
 		"ima-helpers": "0.14.x"
