--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "ima-server",
-	"version": "0.14.0-rc.12",
+	"version": "0.14.0",
 	"description": "Default dev server for IMA.js applications.",
 	"main": "index.js",
 	"scripts": {
