--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ima-server",
-  "version": "0.16.0",
+  "version": "0.16.1",
   "description": "Default dev server for IMA.js applications.",
   "main": "index.js",
   "scripts": {
@@ -68,9 +68,11 @@
   },
   "jestConfig": {
     "mockRules": {
-      "lib": [{
-        "../../app/build.js": "./__mocks__/build.js"
-      }]
+      "lib": [
+        {
+          "../../app/build.js": "./__mocks__/build.js"
+        }
+      ]
     }
   }
 }
