--- a/.travis.yml
+++ b/.travis.yml
@@ -2,28 +2,29 @@ language: node_js
 node_js:
   - "10"
 
+cache:
+  directories:
+    - "node_modules"
+
 install:
   - npm install
   - npx lerna bootstrap
 
 jobs:
   include:
-      - name: "Unit Tests"
-        script: npm test
-      - name: "Lint"
-        script: npm run lint
-      - name: "Docs"
-        script: npm run doc
-      - name: "Benchmark Test"
-        script: npm run benchmark
-      - name: "Audit"
-        script: npm audit || echo \"audit found some vulnerabilities.\"
-      - stage: "deploy"
-        before:
-          - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" >> $HOME/.npmrc 2> /dev/null
-        provider: script
-        script: "npm run release:publish"
-        skip_cleanup: true
-        on:
-          node: "10"
-          tags: true
+    - name: "Unit Tests"
+      script: npm test
+    - name: "Lint"
+      script: npm run lint
+    - name: "Docs"
+      script: npm run doc
+    - name: "Benchmark Test"
+      script: npm run benchmark
+    - name: "Audit"
+      script: npm audit || echo \"audit found some vulnerabilities.\"
+    - if: tag =~ ^v # Run only for tags
+      stage: "deploy"
+      before:
+        - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" >> $HOME/.npmrc 2> /dev/null
+      script: "npm run release:publish"
+      skip_cleanup: true
