--- a/packages/create-ima-app/package.json
+++ b/packages/create-ima-app/package.json
@@ -43,6 +43,7 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^2.4.2",
+    "command-exists": "^1.2.8",
     "execa": "^2.0.5",
     "fs-extra": "^8.1.0",
     "inquirer": "^7.0.0",
