--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,34 +1,31 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "lib": ["ESNext", "DOM.Iterable"],
-    "module": "CommonJS",
-    "rootDir": "./",
-    "declaration": true,
-    "declarationDir": "./dist",
-    "moduleResolution": "node",
-    "typeRoots": ["./types", "./node_modules/@types"],
-    "resolveJsonModule": true,
-    "allowJs": true,
+    "target": "es2016",
+    "lib": [],
+    "module": "commonjs",
+    "typeRoots": [
+      "./typings",
+      "./node_modules/@types"
+    ],
+    // "baseUrl": "./",
+    // "paths": {},
     "outDir": "./dist",
-    "importHelpers": true,
+    "declaration": true,
+    "noEmitOnError": true,
+    "allowJs": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "noImplicitThis": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "skipLibCheck": true
+    "noUnusedLocals": false,
+    "skipLibCheck": true,
+    "jsx": "react",
   },
-  "include": [
-    "./**/*"
-  ],
   "exclude": [
-    "node_modules",
-    "tools",
-    "dist"
+    "./node_modules",
+    "./dist"
+  ],
+  "include": [
+    "./typings/**/*",
+    "./src/**/*"
   ]
 }
