--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -33,6 +33,8 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@ima/error-overlay": "*",
+    "@ima/hmr-client": "*",
     "@babel/core": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-react": "^7.16.5",
@@ -84,5 +86,8 @@
     "@typescript-eslint/parser": "^5.7.0",
     "chokidar": "^3.5.2",
     "typescript": "^4.5.4"
+  },
+  "peerDependencies": {
+    "@ima/server": "*"
   }
 }
