--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -41,6 +41,7 @@
     "anser": "^2.1.0",
     "babel-loader": "^8.2.3",
     "better-opn": "^3.0.1",
+    "bundle-stats-webpack-plugin": "^3.2.2",
     "chalk": "^4.1.2",
     "cli-highlight": "^2.1.11",
     "compression-webpack-plugin": "^9.2.0",
@@ -67,6 +68,7 @@
     "source-map-loader": "^3.0.0",
     "svgo-loader": "^3.0.0",
     "webpack": "^5.65.0",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-dev-middleware": "^5.3.0",
     "webpack-remove-empty-scripts": "^0.7.2",
     "yargs": "^17.3.0"
@@ -77,6 +79,7 @@
     "@types/mini-css-extract-plugin": "^2.4.0",
     "@types/node": "^17.0.0",
     "@types/nodemon": "^1.19.1",
+    "@types/webpack-bundle-analyzer": "^4.4.1",
     "@types/webpack-dev-middleware": "^5.0.2",
     "@types/webpack-hot-middleware": "^2.25.5",
     "@types/yargs": "^17.0.7",
