--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -50,6 +50,7 @@
     "css-minimizer-webpack-plugin": "^3.3.0",
     "esbuild": "^0.14.5",
     "fast-glob": "^3.2.7",
+    "find-cache-dir": "^3.3.2",
     "glob-import-loader": "^1.1.4",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
@@ -76,6 +77,7 @@
   "devDependencies": {
     "@ima/server": "*",
     "@types/express": "^4.17.13",
+    "@types/find-cache-dir": "^3.2.1",
     "@types/mini-css-extract-plugin": "^2.4.0",
     "@types/node": "^17.0.0",
     "@types/nodemon": "^1.19.1",
