--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -43,6 +43,7 @@
     "better-opn": "^3.0.1",
     "bundle-stats-webpack-plugin": "^3.2.2",
     "chalk": "^4.1.2",
+    "clean-webpack-plugin": "^4.0.0",
     "cli-highlight": "^2.1.11",
     "compression-webpack-plugin": "^9.2.0",
     "copy-webpack-plugin": "^10.2.0",
