--- a/packages/create-ima-app/template/package.json
+++ b/packages/create-ima-app/template/package.json
@@ -7,7 +7,7 @@
     "lint": "node_modules/.bin/eslint --fix './{app,server}/**/*.{js,jsx}'",
     "dev": "ima dev",
     "build": "NODE_ENV=production ima build",
-    "start": "NODE_ENV=production ima start"
+    "start": "NODE_ENV=production node server/server.js"
   },
   "keywords": [
     "IMA.js",
