--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -71,6 +71,7 @@
     "webpack": "^5.65.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-dev-middleware": "^5.3.0",
+    "webpack-manifest-plugin": "^4.0.2",
     "webpack-remove-empty-scripts": "^0.7.2",
     "yargs": "^17.3.1"
   },
