--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "bulma": "0.8.0",
     "commitizen": "4.0.3",
     "del": "5.1.0",
-    "eslint": "^7.19.0",
-    "eslint-config-prettier": "7.2.0",
-    "eslint-plugin-jest": "24.1.3",
-    "eslint-plugin-prettier": "3.3.1",
-    "eslint-plugin-react": "7.22.0",
+    "eslint": "^8.6.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jest": "^25.3.4",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
     "fs-extra": "8.1.0",
     "git-cz": "4.3.1",
     "gulp": "4.0.2",
@@ -30,12 +30,14 @@
     "lint-staged": "10.0.8",
     "lunr": "2.3.8",
     "map-stream": "0.0.7",
-    "prettier": "^2.2.1",
-    "stylelint": "13.2.1",
-    "stylelint-config-css-modules": "2.2.0",
-    "stylelint-config-standard": "20.0.0",
-    "stylelint-declaration-block-no-ignored-properties": "2.3.0",
-    "stylelint-order": "4.0.0",
+    "postcss": "^8.4.5",
+    "postcss-less": "^6.0.0",
+    "prettier": "^2.5.1",
+    "stylelint": "^14.2.0",
+    "stylelint-config-css-modules": "^2.3.0",
+    "stylelint-config-standard": "^24.0.0",
+    "stylelint-declaration-block-no-ignored-properties": "^2.5.0",
+    "stylelint-order": "^5.0.0",
     "to-mock": "1.6.2",
     "verdaccio": "4.5.1"
   },
