--- a/packages/create-ima-app/template/package.json
+++ b/packages/create-ima-app/template/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@ima/core": "17.10.0",
+    "@ima/react-hooks": "1.1.0",
     "@ima/server": "17.9.0",
     "body-parser": "1.19.0",
     "compression": "1.7.4",
