--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "ima",
   "description": "IMA.js framework for isomorphic javascript application",
   "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.8",
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
     "@fortawesome/fontawesome-free": "5.12.1",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-replace": "^3.0.1",
     "autocannon": "4.6.0",
     "babel-eslint": "10.1.0",
     "bulma": "0.8.0",
@@ -32,6 +38,8 @@
     "lunr": "2.3.8",
     "map-stream": "0.0.7",
     "prettier": "^2.2.1",
+    "rollup": "^2.64.0",
+    "rollup-plugin-jscc": "^2.0.0",
     "stylelint": "13.2.1",
     "stylelint-config-css-modules": "2.2.0",
     "stylelint-config-standard": "20.0.0",
