--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,9 +2,25 @@
   "name": "@ima/core",
   "version": "17.10.0",
   "description": "IMA.js framework for isomorphic javascript application",
-  "browser": "client.cjs.js",
-  "main": "server.cjs.js",
-  "module": "server.esm.js",
+  "main": "./dist/ima.server.cjs",
+  "module": "./dist/ima.client.esm.js",
+  "exports": {
+    ".": {
+      "import": "./dist/mjs/index.js",
+      "require": "./dist/cjs/index.js"
+    },
+    "./dist/ima.server.cjs": "./dist/ima.server.cjs",
+    "./dist/ima.server.mjs": "./dist/ima.server.mjs",
+    "./dist/ima.client.mjs": "./dist/ima.client.mjs",
+    "./dist/ima.client.cjs": "./dist/ima.client.cjs",
+    "./dist/ima.client.js": "./dist/ima.client.js",
+    "./dist/ima.client.es5.js": "./dist/ima.client.es5.js"
+  },
+  "browser": {
+    "./dist/ima.client.js": "./dist/ima.client.es5.js",
+    "./dist/ima.client.mjs": "./dist/ima.client.mjs",
+    "./dist/ima.client.cjs": "./dist/ima.client.cjs"
+  },
   "scripts": {
     "test": "npm run test:jest && npm run test:es && npm run test:size",
     "test:jest": "../../node_modules/.bin/jest --no-watchman -c jest.conf.js",
@@ -12,7 +28,7 @@
     "test:size": "size-limit",
     "preversion": "npm test",
     "clean": "rm -rf dist",
-    "build": "rollup --config",
+    "build": "../../node_modules/.bin/rollup --config",
     "prepare": "npm run build"
   },
   "keywords": [
@@ -49,18 +65,12 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.7.4",
-    "@babel/plugin-transform-modules-commonjs": "^7.7.4",
     "@size-limit/preset-big-lib": "^2.2.1",
     "enzyme": "^3.10.0",
     "es-check": "^5.1.0",
     "jscodeshift": "^0.6.4",
     "react": "16.9.0",
-    "react-dom": "16.9.0",
-    "rollup": "^1.27.8",
-    "rollup-plugin-jscc": "^1.0.0",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-replace": "^2.2.0"
+    "react-dom": "16.9.0"
   },
   "dependencies": {
     "@ima/helpers": "^17.9.0",
