--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "preversion": "npm test",
-    "test": "../../node_modules/.bin/jest -c jest.conf.js"
+    "test": "../../node_modules/.bin/jest -c jest.conf.js",
+    "build": "../../node_modules/.bin/rollup --config"
   },
   "repository": {
     "type": "git",
