--- a/packages/error-overlay/tsconfig.json
+++ b/packages/error-overlay/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "target": "es5",
+    "downlevelIteration": true,
     "lib": ["DOM"],
     "outDir": "./dist",
     "baseUrl": ".",
