--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
     "@fortawesome/fontawesome-free": "5.12.1",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
     "autocannon": "4.6.0",
     "bulma": "0.8.0",
     "commitizen": "4.0.3",
@@ -38,6 +40,7 @@
     "stylelint-declaration-block-no-ignored-properties": "2.5.0",
     "stylelint-order": "5.0.0",
     "to-mock": "1.6.2",
+    "typescript": "^4.5.5",
     "verdaccio": "4.5.1"
   },
   "scripts": {
