--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
     "@fortawesome/fontawesome-free": "5.12.1",
+    "@types/node": "^17.0.10",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-env": "^1.16.3",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "autocannon": "4.6.0",
@@ -41,8 +44,12 @@
     "stylelint-declaration-block-no-ignored-properties": "2.5.0",
     "stylelint-order": "5.0.0",
     "to-mock": "1.6.2",
+    "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
-    "verdaccio": "4.5.1"
+    "verdaccio": "4.5.1",
+    "webpack": "^5.67.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-merge": "^5.8.0"
   },
   "scripts": {
     "postinstall": "npm install --prefix ./packages/devtools && lerna bootstrap",
