--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -14,8 +14,8 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
+    "build": "../../node_modules/.bin/tsc",
+    "dev": "../../node_modules/.bin/tsc --watch",
     "dev:app": "./tools/devApp.js"
   },
   "author": "Miroslav Jancarik <miroslav.jancarik@firma.seznam.cz>",
@@ -78,14 +78,12 @@
     "@ima/server": "*",
     "@types/express": "^4.17.13",
     "@types/mini-css-extract-plugin": "^2.4.0",
-    "@types/node": "^17.0.8",
     "@types/nodemon": "^1.19.1",
     "@types/webpack-bundle-analyzer": "^4.4.1",
     "@types/webpack-dev-middleware": "^5.3.0",
     "@types/webpack-hot-middleware": "^2.25.5",
     "@types/yargs": "^17.0.8",
-    "chokidar": "^3.5.2",
-    "typescript": "^4.5.4"
+    "chokidar": "^3.5.2"
   },
   "peerDependencies": {
     "@ima/server": "*"
