--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -12,8 +12,8 @@
     "publish-webstore": "npm run build && npm run upload",
     "upload": "webstore upload --source ./dist --auto-publish",
     "test": "../../node_modules/.bin/jest --no-watchman -c jest.conf.js",
-    "build": "NODE_ENV=production webpack --config webpack.prod.js",
-    "dev": "webpack --watch --progress --config webpack.dev.js"
+    "build": "NODE_ENV=production ../../node_modules/.bin/webpack --config webpack.prod.js",
+    "dev": "../../node_modules/.bin/webpack --watch --progress --config webpack.dev.js"
   },
   "keywords": [
     "IMA",
@@ -65,10 +65,7 @@
     "postcss": "^8.2.4",
     "postcss-loader": "4.2.0",
     "rimraf": "^3.0.2",
-    "terser-webpack-plugin": "5.1.1",
-    "webpack": "5.19.0",
-    "webpack-cli": "4.4.0",
-    "webpack-merge": "5.7.3"
+    "terser-webpack-plugin": "5.1.1"
   },
   "dependencies": {
     "@ima/devtools-scripts": "^17.8.0",
