--- a/packages/error-overlay/package.json
+++ b/packages/error-overlay/package.json
@@ -12,18 +12,16 @@
   "version": "17.10.0",
   "main": "./dist/",
   "scripts": {
-    "dev": "NODE_ENV=development webpack --config webpack.config.ts --watch",
-    "build": "NODE_ENV=production webpack --config webpack.config.ts"
+    "dev": "NODE_ENV=development ../../node_modules/.bin/webpack --watch",
+    "build": "NODE_ENV=production ../../node_modules/.bin/webpack"
   },
   "author": "Jan Šimeček",
   "license": "MIT",
   "devDependencies": {
     "@ima/cli": "*",
-    "@types/node": "^17.0.4",
     "@types/prismjs": "^1.16.6",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
-    "@types/webpack": "^5.28.0",
     "anser": "^2.1.0",
     "clsx": "^1.1.1",
     "copy-webpack-plugin": "^10.2.0",
@@ -41,11 +39,6 @@
     "scheduler": "^0.20.2",
     "source-map": "^0.7.3",
     "tailwindcss": "^3.0.7",
-    "ts-loader": "^9.2.6",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4",
-    "use-context-selector": "^1.3.9",
-    "webpack": "^5.64.4",
-    "webpack-cli": "^4.9.1"
+    "use-context-selector": "^1.3.9"
   }
 }
