--- a/packages/hmr-client/package.json
+++ b/packages/hmr-client/package.json
@@ -15,22 +15,13 @@
   "main": "./dist/fastRefreshClient.js",
   "types": "./dist/types.d.ts",
   "scripts": {
-    "dev": "NODE_ENV=development webpack --config webpack.config.ts --watch",
-    "build": "NODE_ENV=production webpack --config webpack.config.ts"
+    "dev": "NODE_ENV=development ../../node_modules/.bin/webpack --watch",
+    "build": "NODE_ENV=production ../../node_modules/.bin/webpack"
   },
   "author": "Jan Šimeček",
   "license": "MIT",
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.6",
-    "@types/node": "^17.0.4",
-    "@types/webpack": "^5.28.0",
-    "@types/webpack-env": "^1.16.3",
-    "lodash.debounce": "^4.0.8",
-    "ts-loader": "^9.2.6",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4",
-    "webpack": "^5.64.4",
-    "webpack-cli": "^4.9.1",
-    "webpack-merge": "^5.8.0"
+    "lodash.debounce": "^4.0.8"
   }
 }
