--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -51,7 +51,12 @@
   "devDependencies": {
     "@babel/core": "^7.7.4",
     "@babel/plugin-transform-modules-commonjs": "^7.7.4",
+    "@rollup/plugin-typescript": "^8.3.0",
     "@size-limit/preset-big-lib": "^2.2.1",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.13",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "enzyme": "^3.10.0",
     "es-check": "^5.1.0",
     "jscodeshift": "^0.6.4",
@@ -60,7 +65,8 @@
     "rollup": "^1.27.8",
     "rollup-plugin-jscc": "^1.0.0",
     "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-replace": "^2.2.0"
+    "rollup-plugin-replace": "^2.2.0",
+    "typescript": "^4.5.5"
   },
   "dependencies": {
     "@ima/helpers": "^17.9.0",
