--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -35,7 +35,8 @@
     "@ima/plugin-websocket": "^0.1.0"
   },
   "dependencies": {
-    "@babel/core": "^7.15.0",
+    "@babel/core": "7.16.0",
+    "@babel/helpers": "7.16.3",
     "@babel/plugin-external-helpers": "^7.14.5",
     "@babel/plugin-transform-modules-commonjs": "^7.15.0",
     "@babel/plugin-transform-modules-systemjs": "^7.14.5",
