--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -33,55 +33,55 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@babel/core": "^7.16.7",
-    "@babel/preset-env": "^7.16.8",
+    "@babel/core": "^7.17.2",
+    "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@gatsbyjs/webpack-hot-middleware": "^2.25.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
-    "anser": "^2.1.0",
+    "anser": "^2.1.1",
     "babel-loader": "^8.2.3",
-    "better-opn": "^3.0.1",
-    "bundle-stats-webpack-plugin": "^3.2.3",
+    "better-opn": "^3.0.2",
+    "bundle-stats-webpack-plugin": "^3.2.4",
     "chalk": "^4.1.2",
     "cli-highlight": "^2.1.11",
     "compression-webpack-plugin": "^9.2.0",
-    "copy-webpack-plugin": "^10.2.0",
-    "core-js": "^3.20.3",
-    "css-loader": "^6.5.1",
-    "css-minimizer-webpack-plugin": "^3.3.1",
+    "copy-webpack-plugin": "^10.2.4",
+    "core-js": "^3.21.0",
+    "css-loader": "^6.6.0",
+    "css-minimizer-webpack-plugin": "^3.4.1",
     "fast-glob": "^3.2.11",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "messageformat": "^2.3.0",
-    "mini-css-extract-plugin": "^2.5.0",
+    "mini-css-extract-plugin": "^2.5.3",
     "mini-svg-data-uri": "^1.4.3",
     "nodemon": "^2.0.15",
-    "postcss": "^8.4.5",
+    "postcss": "^8.4.6",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
     "postcss-pipeline-webpack-plugin": "^6.0.0",
-    "postcss-preset-env": "^7.2.3",
+    "postcss-preset-env": "^7.3.1",
     "pretty-bytes": "^5.6.0",
     "pretty-ms": "^7.0.1",
     "react-refresh": "^0.11.0",
     "source-map-loader": "^3.0.1",
     "svgo-loader": "^3.0.0",
-    "webpack": "^5.66.0",
+    "webpack": "^5.68.0",
     "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-dev-middleware": "^5.3.0",
-    "webpack-remove-empty-scripts": "^0.7.2",
+    "webpack-dev-middleware": "^5.3.1",
+    "webpack-remove-empty-scripts": "^0.7.3",
     "yargs": "^17.3.1"
   },
   "devDependencies": {
-    "@ima/server": "*",
+    "@ima/server": "^17.12.2",
     "@types/express": "^4.17.13",
-    "@types/mini-css-extract-plugin": "^2.4.0",
+    "@types/mini-css-extract-plugin": "^2.5.1",
     "@types/nodemon": "^1.19.1",
     "@types/webpack-bundle-analyzer": "^4.4.1",
     "@types/webpack-dev-middleware": "^5.3.0",
     "@types/webpack-hot-middleware": "^2.25.5",
     "@types/yargs": "^17.0.8",
-    "chokidar": "^3.5.2"
+    "chokidar": "^3.5.3"
   },
   "peerDependencies": {
     "@ima/server": "*"
